--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "bootstrap": "^4.0.0-alpha.3",
     "css-loader": "^0.23.1",
+    "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-favicon": "0.0.4",
     "react-router": "^2.5.2",
     "sass-loader": "^3.2.2",
     "style-loader": "^0.13.1",
+    "tether": "^1.3.4",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
