--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.1.0",
     "react-favicon": "0.0.4",
+    "react-photoswipe": "^1.2.0",
     "react-router": "^2.5.2",
     "sass-loader": "^3.2.2",
     "style-loader": "^0.13.1",
