--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-router-lessons",
   "version": "1.0.1",
   "description": "Boilerplate for React webpack build.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "webpack",
     "start": "webpack-dev-server"
@@ -22,20 +22,31 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "^4.0.0-alpha.3",
+    "classnames": "latest",
     "css-loader": "^0.23.1",
+    "immutable": "^3.8.1",
     "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
-    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.1.0",
     "react-favicon": "0.0.4",
     "react-photoswipe": "^1.2.0",
-    "react-router": "^2.5.2",
+    "react-redux": "^4.4.6",
+    "react-toolbox": "^1.3.0",
+    "react-waypoint": "^4.1.0",
+    "rebass": "^0.3.4",
+    "redux": "^3.6.0",
+    "reflexbox": "^2.2.3",
     "sass-loader": "^3.2.2",
     "style-loader": "^0.13.1",
     "tether": "^1.3.4",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "immutability-helper": "^2.0.0",
+    "react-scroll": "latest"
   }
 }
