--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-favicon": "0.0.4",
+    "react-icons": "^2.2.3",
     "react-photoswipe": "^1.2.0",
     "react-redux": "^4.4.6",
     "react-toolbox": "^1.3.0",
