--- a/package.json
+++ b/package.json
@@ -18,16 +18,9 @@
   },
   "homepage": "https://github.com/buckyroberts/React-Webpack#readme",
   "dependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "bootstrap": "^4.0.0-alpha.3",
     "classnames": "latest",
     "css-loader": "^0.23.1",
     "immutable": "^3.8.1",
-    "jquery": "^3.1.0",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -42,12 +35,17 @@
     "reflexbox": "^2.2.3",
     "sass-loader": "^3.2.2",
     "style-loader": "^0.13.1",
-    "tether": "^1.3.4",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "tether": "^1.3.4"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.22.0",
     "immutability-helper": "^2.0.0",
-    "react-scroll": "latest"
+    "react-scroll": "latest",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "2.4.1"
   }
 }
