--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "classnames": "latest",
     "css-loader": "^0.23.1",
     "immutable": "^3.8.1",
-    "jquery": "^3.1.0",
+    "jquery": "^3.2.0",
+    "lodash": "^4.17.4",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-favicon": "0.0.4",
     "react-icons": "^2.2.3",
+    "react-images": "~0.5.2",
+    "react-measure": "^1.4.6",
+    "react-photo-gallery": "^5.3.0",
     "react-photoswipe": "^1.2.0",
     "react-redux": "^4.4.6",
     "react-toolbox": "^1.3.0",
