--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   },
   "homepage": "http://danielbook.se",
   "dependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.3",
     "classnames": "latest",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.28.7",
     "immutable": "^3.8.1",
     "jquery": "^3.2.0",
     "lodash": "^4.17.4",
@@ -44,13 +44,14 @@
     "rebass": "^0.3.4",
     "redux": "^3.6.0",
     "reflexbox": "^2.2.3",
-    "sass-loader": "^3.2.2",
-    "style-loader": "^0.13.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "tether": "^1.3.4",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.6.0",
     "immutability-helper": "^2.0.0",
     "react-scroll": "latest"
   }
