--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Personal portfolio page",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack",
-    "start": "webpack-dev-server"
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.0.0-alpha.3",
     "classnames": "latest",
+    "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
     "immutable": "^3.8.1",
     "jquery": "^3.2.0",
@@ -33,26 +34,30 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-favicon": "0.0.4",
+    "react-hot-loader": "^1.3.1",
     "react-icons": "^2.2.3",
     "react-images": "~0.5.2",
     "react-measure": "^1.4.6",
     "react-photo-gallery": "^5.3.0",
     "react-photoswipe": "^1.2.0",
     "react-redux": "^4.4.6",
+    "react-scroll": "latest",
     "react-toolbox": "^1.3.0",
     "react-waypoint": "^4.1.0",
-    "rebass": "^0.3.4",
+    "rebass": "^1.0.4",
     "redux": "^3.6.0",
     "reflexbox": "^2.2.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "styled-components": "latest",
     "tether": "^1.3.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^2.9.1",
+    "webpack-merge": "^4.1.0",
     "babel-preset-env": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.17",
+    "file-loader": "^1.1.3",
     "immutability-helper": "^2.0.0",
-    "react-scroll": "latest"
+    "uglifyjs-webpack-plugin": "latest"
   }
 }
