--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal portfolio page",
   "main": "app.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js" ,
     "start": "webpack-dev-server --config webpack.dev.js"
   },
   "repository": {
@@ -20,15 +20,17 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "bootstrap": "^4.0.0-alpha.3",
-    "classnames": "latest",
+    "clean-webpack-plugin": "^0.1.17",
     "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.3",
+    "immutability-helper": "^2.0.0",
     "immutable": "^3.8.1",
-    "jquery": "^3.2.0",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
@@ -42,22 +44,17 @@
     "react-photoswipe": "^1.2.0",
     "react-redux": "^4.4.6",
     "react-scroll": "latest",
-    "react-toolbox": "^1.3.0",
     "react-waypoint": "^4.1.0",
     "rebass": "^1.0.4",
     "redux": "^3.6.0",
-    "reflexbox": "^2.2.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "styled-components": "latest",
     "tether": "^1.3.4",
+    "uglifyjs-webpack-plugin": "latest",
+    "webfontloader": "^1.6.28",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0",
-    "babel-preset-env": "^1.6.0",
-    "clean-webpack-plugin": "^0.1.17",
-    "file-loader": "^1.1.3",
-    "immutability-helper": "^2.0.0",
-    "uglifyjs-webpack-plugin": "latest"
+    "webpack-merge": "^4.1.0"
   }
 }
